plugins {
    id 'org.springframework.boot' version '3.1.5'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
    id 'groovy'
    id 'idea'
}

group = 'com.bottega'
version = '1.0.0'
sourceCompatibility = '21'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'javax.persistence:javax.persistence-api:2.2'

    implementation 'org.apache.commons:commons-lang3:3.11'
    implementation 'io.vavr:vavr:0.10.2'

    //lombok
    compileOnly 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.rest-assured:rest-assured:5.3.1'

    //spock
    testImplementation platform('org.apache.groovy:groovy-bom:4.0.15')
    testImplementation 'org.apache.groovy:groovy'
    testImplementation platform("org.spockframework:spock-bom:2.3-groovy-4.0")
    testImplementation "org.spockframework:spock-core"
}

tasks.named('test') {
    useJUnitPlatform()
}

sourceSets {
    test {
        groovy {
            srcDirs = ['src/test/java']
        }
    }
}

task wrapper(type: Wrapper){
    gradleVersion = '8.5'
}
